--- a/src/sass/app/app.scss
+++ b/src/sass/app/app.scss
@@ -1,3 +1,5 @@
+$basePath: "../";
+
 @font-face {
   font-family: 'TheSansRio2016TT-Regular';
   src: url("../fonts/TheSansRio2016/regular/TheSansRio2016TT-Regular.eot");
