--- a/src/sass/af/af.scss
+++ b/src/sass/af/af.scss
@@ -90,7 +90,7 @@ body{
   position: absolute;
   display: block;
   top: 0.5em; right: 1em;
-  font-size: large;
+  font-size: $fontSize-large;
   text-decoration: none;
   z-index: 2;
 
@@ -111,7 +111,7 @@ body{
   height: 100%;
   width: 100%;
   vertical-align: middle;
-  font-size: x-large;
+  font-size: $fontSize-xlarge;
 
 }
 .en #AFLogo{
@@ -147,14 +147,14 @@ body{
 #AFContainer{
   display: table-cell;
   vertical-align: middle;
-  font-size: medium;
+  font-size: $fontSize-medium;
 }
 
 .AFContent{
   display: block;
   text-align: center;
   position: relative;
-  max-width: 1600px;
+  max-width: 1440px;
   margin: 1em auto;
 }
 
