--- a/src/sass/af/init.scss
+++ b/src/sass/af/init.scss
@@ -1,3 +1,13 @@
 $basePath: "/mascote/";
 
+@import "_sizes";
+
+$fontSize-xxlarge: 3rem;
+$fontSize-xlarge: 2rem;
+$fontSize-large: 1.5rem;
+$fontSize-largeish: 1.2rem;
+$fontSize-medium: 1rem;
+$fontSize-small: 0.7rem;
+$fontSize-xsmall: 0.5rem;
+
 @import "af";
