--- a/src/sass/af/question.scss
+++ b/src/sass/af/question.scss
@@ -1,17 +1,13 @@
 $opt-color: darken(rgb(104, 37, 123), 10%);
 
 #AFQuestionForm{
-
-  width: 70%;
-
-  @media screen and (min-width: 1680px) {
-    width: 80em;
-  }
+  width: 75%;
 
   margin: 0 auto;
   >header{
-    padding: 2em 0;
-    height: 8em !important;
+
+    height: 8rem !important;
+    margin-bottom: 2rem;
     #AFLogo{
       background-size: contain;
     }
@@ -60,7 +56,7 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9fa00', endColorstr='#ffd500', GradientType=0 );
 
     font-weight: bold;
-    font-size: large;
+    font-size: $fontSize-medium;
 
 
 
@@ -113,7 +109,7 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
   padding: 1.2em 2em 1.5em 2em;
   margin: 0;
   text-align: center;
-  font-size: large;
+  font-size: $fontSize-largeish;
   border-radius: 0.7em;
   color: rgb(40, 40, 40);
   box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.1);
