--- a/src/sass/selfie/selfie.scss
+++ b/src/sass/selfie/selfie.scss
@@ -357,7 +357,7 @@
 #SelfieInitialMascote1, #SelfieInitialMascote2{
   height: 70%;
 }
-@media (max-width: 1024px), (max-height: 768px) {
+@media (max-width: 1024px) and (max-height: 768px) {
 
   #SelfieApp.landscape #FlexRowLeft{
     max-height: 700px;
