--- a/src/sass/af/_sizes.scss
+++ b/src/sass/af/_sizes.scss
@@ -1,37 +1,39 @@
 /* Smartphones (portrait and landscape) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) {
+%phoneHtmlStyle {
+  font-size: 13px;
+}
+%tabletHtmlStyle{
+  font-size: 15px;
+}
+
+/* Smartphones  */
+
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
   html{
-    font-size: 13px;
+    @extend %phoneHtmlStyle;
   }
 }
 
-/* Smartphones (landscape) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
 
-}
-
-/* Smartphones (portrait) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
-
+@media only screen and (max-device-height: 480px) and (orientation: landscape) {
+  html{
+    @extend %phoneHtmlStyle;
+  }
 }
 
 /* tablets */
-@media handheld and (min-device-width: 960px) {
+
+@media only screen and (min-device-width: 960px) and (orientation: landscape) {
   html{
-    font-size: 15px;
+    @extend %tabletHtmlStyle;
   }
 }
 
-/* tablets landscape */
-@media handheld and (min-device-width: 960px) and (orientation: landscape) {
-
+@media only screen and (min-device-height: 960px) and (orientation: portrait) {
+  html {
+    @extend %tabletHtmlStyle;
+  }
 }
-
-/* tablets portrait */
-@media handheld and (min-device-width: 960px) and (orientation: portrait) {
-
-}
-
 /* Desktops and laptops ----------- */
 @media only screen and (min-width: 1224px) {
   html{
@@ -47,6 +49,6 @@
 }
 
 /* iPhone 4 ----------- */
-@media handheld and (-webkit-min-device-pixel-ratio: 1.5), handheld and (min-device-pixel-ratio: 1.5) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
 
 }
