--- a/src/sass/af/question.scss
+++ b/src/sass/af/question.scss
@@ -2,8 +2,12 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
 
 #AFQuestionForm{
   width: 75%;
-
   margin: 0 auto;
+
+  @media only screen and (max-width: 480px) {
+    width: 85%;
+  }
+
   >header{
 
     height: 8rem !important;
@@ -11,11 +15,22 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
     #AFLogo{
       background-size: contain;
     }
+
+    @media only screen and (max-width: 480px) {
+      height: 7rem !important;
+      margin-bottom: 0.5rem;
+      #AFLogo {
+        background-size: 65% auto;
+      }
+    }
   }
 
   >fieldset{
 
     padding: 2em 0; margin: 0;
+    @media only screen and (max-width: 480px) {
+      padding: 1rem 0;
+    }
     border: none;
     position: relative;
 
@@ -30,6 +45,10 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
       }
       &:last-child{
         right: -10%;
+      }
+
+      @media only screen and (max-width: 480px) {
+        display: none;
       }
     }
   }
@@ -104,12 +123,12 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
 }
 
 #AFQuestion{
-  line-height: 2em;
+  line-height: 1.5em;
   background-color: white;
   padding: 1.2em 2em 1.5em 2em;
   margin: 0;
   text-align: center;
-  font-size: $fontSize-largeish;
+  font-size: $fontSize-medium;
   border-radius: 0.7em;
   color: rgb(40, 40, 40);
   box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.1);
@@ -123,8 +142,9 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
 .AFOptLetter{
   display: table-cell;
   text-align: center;
-  width: 20%;
+  width: 30%;
   vertical-align: middle;
+
   >span{
     display: inline-block;
     width: 2.5em;
@@ -134,11 +154,17 @@ $opt-color: darken(rgb(104, 37, 123), 10%);
     box-shadow: 2px 4px 7px rgba(104, 37, 123, 0.5);
     color: $opt-color !important;
   }
+
 }
 
 .AFOptText{
   display: table-cell;
   text-align: center;
   vertical-align: middle;
-  text-indent: -20%;
+  text-indent: -25%;
+  @media only screen and (max-width: 480px) {
+    text-indent: 0;
+    text-align: left;
+  }
+
 }
