--- a/src/sass/af/welcome.scss
+++ b/src/sass/af/welcome.scss
@@ -77,11 +77,56 @@
     margin-bottom: 2rem;
     background-size: contain;
   }
-
-
 }
 
 #AFWelcomeRight {
   background: url(#{$basePath}img/af-mascotes.png) left center no-repeat;
   background-size: 80%;
+}
+
+@media only screen and (max-width: 480px) {
+
+  #AFWelcome{
+    display: block;
+    position: relative;
+  }
+
+  #AFWelcomeLeft {
+    display: block;
+    position: relative;
+    width: 100%;
+    min-height: 25rem;
+    z-index: 2;
+    margin: 0; padding: 2rem 0;
+    >.inner{
+      height: auto;
+    }
+    #AFWelcomeText{
+      display: none;
+    }
+
+    #AFLogo{
+      position: relative;
+      background-size: 65% auto;
+      height: 7rem;
+      margin-bottom: 0;
+    }
+
+    #AFWelcomeAction{
+      position: relative;
+      margin-top: 22rem;
+    }
+  }
+
+  #AFWelcomeRight {
+    display: block;
+    position: absolute;
+    height: 20rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    top: 9rem;
+    background-size: 80% auto;
+    background-position: center;
+  }
 }
