--- a/src/sass/app/_sizes.scss
+++ b/src/sass/app/_sizes.scss
@@ -1,35 +1,60 @@
 /* Smartphones (portrait and landscape) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) {
+%phoneHtmlStyle {
+  font-size: 13px;
+}
+%tabletHtmlStyle{
+  font-size: 15px;
+}
+
+/* Smartphones  */
+
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
   html{
-    font-size: 13px;
+    @extend %phoneHtmlStyle;
   }
 }
 
-/* Smartphones (landscape) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
+@media only screen and (max-device-height: 480px) and (orientation: landscape) {
+  html{
+    @extend %phoneHtmlStyle;
+  }
 
-}
+  #Main{
+    visibility: hidden  !important;
+  }
 
-/* Smartphones (portrait) ----------- */
-@media handheld and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
-
+  #PleaseRotate{
+    display: block  !important;
+    background: url(#{$basePath}/icons/rotate-phone.png) center no-repeat;
+    margin-top: 2rem;
+    height: 200px;
+  }
 }
 
 /* tablets */
-@media handheld and (min-device-width: 960px) {
+
+@media only screen and (min-device-width: 960px) and (orientation: landscape) {
   html{
-    font-size: 15px;
+    @extend %tabletHtmlStyle;
   }
 }
 
-/* tablets landscape */
-@media handheld and (min-device-width: 960px) and (orientation: landscape) {
+@media only screen and (min-device-height: 960px) and (orientation: portrait) {
 
-}
+  html{
+    @extend %tabletHtmlStyle;
+  }
 
-/* tablets portrait */
-@media handheld and (min-device-width: 960px) and (orientation: portrait) {
+  #Main{
+    visibility: hidden  !important;
+  }
 
+  #PleaseRotate{
+    display: block !important;
+    background: url(#{$basePath}/icons/rotate-tablet.png) center no-repeat;
+    margin-top: 2rem;
+    height: 400px;
+  }
 }
 
 /* Desktops and laptops ----------- */
@@ -47,6 +72,6 @@
 }
 
 /* iPhone 4 ----------- */
-@media handheld and (-webkit-min-device-pixel-ratio: 1.5), handheld and (min-device-pixel-ratio: 1.5) {
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
 
 }
