--- a/src/sass/af/_sizes.scss
+++ b/src/sass/af/_sizes.scss
@@ -5,45 +5,96 @@
 %tabletHtmlStyle{
   font-size: 15px;
 }
+$portrait-phone:
+  "only screen
+    and (max-aspect-ratio: 8/10),
+  only screen
+    and (max-width: 480px) and (orientation: portrait)";
+
+$landscape-phone:
+  "only screen
+    and (min-aspect-ratio: 81/100) and (max-height: 480px),
+  only screen
+    and (max-width: 480px) and (orientation: landscape)";
+
+$landscape-tablet:
+  "only screen
+    and (min-width: 960px) and (orientation: landscape),
+  only screen
+    and (min-height: 480px) and (min-aspect-ratio: 1/1)";
+
+$portrait-tablet:
+  "only screen
+    and (min-width: 960px) and (orientation: portrait),
+  only screen
+    and (min-width: 480px) and (max-width: 768px) and (max-aspect-ratio: 1/1)";
+
 
 /* Smartphones  */
 
-@media only screen and (max-device-width: 480px) and (orientation: portrait) {
+@media #{$portrait-phone} {
   html{
     @extend %phoneHtmlStyle;
   }
 }
 
-
-@media only screen and (max-device-width: 480px) and (orientation: landscape) {
+@media #{$landscape-phone} {
   html{
     @extend %phoneHtmlStyle;
   }
+
+  .AF {
+
+    > *:not(#AFContainer) {
+      visibility: hidden  !important;
+    }
+
+    #AFContainer{
+      background: url(#{$basePath}img/rotate-phone.png) center no-repeat;
+      > * {
+        visibility: hidden;
+      }
+    }
+  }
+
 }
 
 /* tablets */
 
-@media only screen and (min-device-width: 960px) and (orientation: landscape) {
+@media #{$landscape-tablet} {
   html{
     @extend %tabletHtmlStyle;
   }
 }
 
-@media only screen and (min-device-width: 960px) and (orientation: portrait) {
+@media #{$portrait-tablet} {
   html {
     @extend %tabletHtmlStyle;
   }
+  .AF {
+    > *:not(#AFContainer) {
+      visibility: hidden  !important;
+    }
+
+    #AFContainer{
+      background: url(#{$basePath}img/rotate-tablet.png) center no-repeat;
+      > * {
+        visibility: hidden;
+      }
+    }
+  }
 }
+
 /* Desktops and laptops ----------- */
 @media only screen and (min-width: 1224px) {
-  html{
+  html {
     font-size: 17px;
   }
 }
 
 /* Large screens ----------- */
 @media only screen and (min-width: 1500px) {
-  html{
+  html {
     font-size: 18px;
   }
 }
