--- a/src/sass/af/af.scss
+++ b/src/sass/af/af.scss
@@ -138,7 +138,7 @@ body{
       background: url(#{$basePath}img/bt-af-next.png) center no-repeat;
     }
 
-    @media only screen and (max-width: 480px) {
+    @media #{$portrait-phone} {
       &.prev {
         background: url(#{$basePath}img/bt-af-prev-mobile.png) center no-repeat;
       }
@@ -169,7 +169,7 @@ body{
   margin: 1em auto;
 }
 
-@media only screen and (max-width: 480px) {
+@media #{$portrait-phone} {
   .AF {
     background: url(#{$basePath}img/bg-af-mobile.jpg) center/cover no-repeat !important;
     display: block !important;
