--- a/src/sass/af/sports.scss
+++ b/src/sass/af/sports.scss
@@ -21,7 +21,7 @@
 
     height: 28em;
 
-    @media only screen and (max-width: 480px) {
+    @media #{$portrait-phone} {
       height: auto;
       margin-top: 2rem;
     }
@@ -41,7 +41,7 @@
   }
 
   &.expanded > section {
-    @media only screen and (max-width: 480px) {
+    @media #{$portrait-phone} {
       height: auto;
     }
   }
@@ -106,7 +106,7 @@
   text-align: center;
   height: 100%;
 
-  @media only screen and (max-width: 480px) {
+  @media #{$portrait-phone} {
     &:not(.middle) {
       height: 28rem;
     }
@@ -332,7 +332,7 @@
   width: 50%;
   left: 25%;
 
-  @media only screen and (max-width: 480px) {
+  @media #{$portrait-phone} {
     width: 95%;
     left: 2.5%;
     >.inner{
@@ -346,7 +346,7 @@
   width: 70%;
   left: 15%;
 
-  @media only screen and (max-width: 480px) {
+  @media #{$portrait-phone} {
     width: 95%;
     left: 2.5%;
     >.inner{
@@ -366,7 +366,7 @@
   position: fixed;
   z-index: 2;
   padding: 0 2em 0 2em;
-  @media only screen and (min-width: 960px) {
+  @media only screen and (min-width: 481px) and (min-aspect-ratio: 81/10) {
     bottom: 1em;
     right: -1em;
   }
@@ -416,7 +416,7 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media #{$portrait-phone} {
 
   #AFSports {
 
@@ -478,10 +478,11 @@
   #AFSportsGoBack {
 
     display: none;
-    font-size: $fontSize-medium;
+    font-size: .8rem;
 
     &.expanded {
       display: block;
+      position: absolute;
       top: 9rem;
     }
 
